[package]
authors = ["Gavin Roberts <gavinsroberts13@gmail.com>"]
name = "skyweaver"
version = "0.1.0"
edition.workspace = true
description = """
A control station for drone automation
"""

[workspace.package]
edition = "2021"

[workspace.dependencies]
sdl2 = "0.37.0"

# internal crates
# form = { path = "crates/form" }

[dependencies]
sdl2.workspace = true
clap = "4.5.4"
ctrlc = { version = "3.4.4", features = ["termination"] }
